--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -1,2 +1,37 @@
 ﻿body {
+    background-color: #f5f0e9;
+
+    font: normal, 13px, Tahoma,Arial, Helvetica, sans-serif;
+    color: #44433b;
+
+
+}
+
+h1
+{
+   color:#593b0d;
+   font-size: 30px;
+}
+
+/* top menu -- login search*/
+.menu1Line
+{
+   font: 13px;
+   color:#484644;
+}
+/* top main menu kategorier*/
+.menu2Line
+{
+   font: bold, 18px;
+   color:#504332;
+}
+.menu2line.hover
+{
+   color:#c07a0e;
+}
+/*varukorg*/
+.menuVarukorg
+{
+   font: 18px;
+   color:#504332;
 }
