--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -2,6 +2,10 @@
     background-color: #f5f0e9;
     font: normal, 13px, Tahoma,Arial, Helvetica, sans-serif;
     color: #44433b;
+
+    width:1200px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 h1 {
@@ -15,6 +19,55 @@ h1 {
     font: 13px;
     color: #484644;
 }
+
+
+
+
+header{
+    display:flex;
+    justify-content:space-between;
+}
+#header-menus{
+    /*background-color:lightblue;*/
+    width:100%;
+    display:flex;
+    flex-direction:column;
+}
+    #header-top-nav{
+        display:flex;
+        align-items:baseline;
+    }
+    #header-bottom-nav{
+        display:flex;
+        align-items:baseline;
+    }
+    #header-bottom-nav ul{
+        display:flex;
+        /*justify-content:space-around;*/
+        /*background-color:lightgreen;*/
+    }
+    #header-bottom-nav ul li{
+        padding:0 8px 0 8px;
+    }
+    figure{
+        display:flex;
+        align-items:baseline;
+    }
+    .icon-text{
+        margin-left:8px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
 #header-bottom-nav ul {
     list-style-type: none;
 }
