--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -27,10 +27,6 @@ h1 {
     font: 13px;
     color: #484644;
 }
-
-
-
-
 header{
     display:flex;
     justify-content:space-between;
@@ -168,4 +164,29 @@ footer{
 }
 #popularProductsContainerId a:hover span{
     color: #c07a0e;
+}
+
+/*PRODUCTDETAILS.ASPX*/
+.product-details-img-small{
+    width:100px;
+    height:auto;
+
+    padding-bottom:15px;
+}
+#product-details-img-large{
+    width:500px;
+
+    padding-left:15px;
+}
+#product-details-container{
+    display:flex;
+}
+#product-details-container aside{
+    display:flex;
+    flex-direction:column;
+}
+#product-details-wrapper{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
 }
