contact validation now working properly. But submiting does not send any mails at this point. see behind code file.

--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -229,3 +229,10 @@ footer{
 #product-details-specs-section div{
     margin-top:10px;
 }
+
+
+/*CONTACT.ASPX*/
+input#ContentPlaceHolder_txt_email,
+input#ContentPlaceHolder_txt_fullname {
+    width: 100%;
+}
