connected css to products panel on testing page

--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -238,8 +238,7 @@ input#ContentPlaceHolder_txt_fullname {
 }
 
 
-
 /*TESTING.ASPX*/
-#ProductsPanel{
-    background-color:blue;
+.ProductsPanel img{
+    border:1px solid black;
 }
