some changes to css

--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -246,5 +246,5 @@ input#ContentPlaceHolder_txt_fullname {
 
 /*Product list pages - boots...*/
 .product-list-table{
-    float:right;
+    float:left;
 }
