--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -245,20 +245,25 @@ input#ContentPlaceHolder_txt_fullname {
 }
 
 /*Product list pages - sneakers,boots...*/
-
-
-.product-list-flex-cont{
-      
+.product-catalog-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.product-list-container{
      display:flex;
-       flex-direction: row ;
-       width:940px;
-       
-    
-}
-.product-list-flex-cont{
-    width:250px;
-}
-.product-list-table-child{
+     flex-direction:column;
 
-    text-align:center;
+     width:235px;
+     height:auto;
+
+     background-color:lightgray;
+
+     padding:5px;
+     margin:5px;
 }
+.product-list-container img{
+     width:235px;
+     height:auto;
+}
+
