--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -260,11 +260,12 @@ input#ContentPlaceHolder_txt_fullname {
 
      width:180px;
      height:auto;
-
+     text-align: center;
      background-color:white;
 
      padding:10px;
-     margin-right:35px;
+     margin-right:17px;
+     margin-left:17px;
      margin-bottom:35px;
 }
 .product-list-container img{
