--- a/casualshoes/casualshoes/Site1.Master
+++ b/casualshoes/casualshoes/Site1.Master
@@ -22,6 +22,7 @@
                         </figure>
                         <div>
                             <asp:TextBox ID="SearchBoxID" placeholder="Search CasualShoes.com" runat="server"></asp:TextBox>
+                            <asp:Button ID="Search" runat="server" OnClick="Search_Click" Text="Sök" />
                         </div>
                         <figure>
                             <img src="../images/png/service.png" />
