if user is not logged in and tries to access cart, user gets redirected to login page

--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -39,7 +39,7 @@ header{
 }
     #header-top-nav{
         display:flex;
-        align-items:baseline;
+        /*align-items:baseline;*/
         justify-content: space-between;
         padding:15px;
 
