Small fix in CSS.

--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -273,7 +273,7 @@ input#ContentPlaceHolder_txt_fullname {
      width:180px;
      height:auto;
      text-align: center;
-     background-color:white;
+     background-color:#f9f9f9;
 
      padding:10px;
      margin-right:35px;
