more css to cart

--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -310,4 +310,8 @@ table#ContentPlaceHolder_GridView1 {
 
     display:flex;
     justify-content:space-around;
+    margin: 25px 0;
+}
+.h2-center{
+    text-align:center;
 }
