--- a/casualshoes/casualshoes/Site1.Master
+++ b/casualshoes/casualshoes/Site1.Master
@@ -5,6 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>Home</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
@@ -16,10 +17,7 @@
                 </figure>
                 <div id="header-menus">
                     <div id="header-top-nav">
-                        <figure>
-                            <img src="../images/png/shippingbox.png" />
-                            <figcaption class="icon-text">Fri frakt och retur!</figcaption>
-                        </figure>
+                        
                         <div>
                             <asp:TextBox ID="SearchBoxID" placeholder="Search CasualShoes.com" runat="server"></asp:TextBox>
                             <asp:Button ID="Search" runat="server" OnClick="Search_Click" Text="Sök" />
