--- a/casualshoes/casualshoes/css/style.css
+++ b/casualshoes/casualshoes/css/style.css
@@ -1,6 +1,7 @@
 ﻿body {
     background-color: #f5f0e9;
-    font: normal, 13px, Tahoma,Arial, Helvetica, sans-serif;
+    font-family: Tahoma,Arial, Helvetica, sans-serif;
+    font-size: 13px;
     color: #44433b;
 
     width:940px;
@@ -13,8 +14,9 @@
 }
 
 h1 {
+    font-family: 'Fjalla One', sans-serif;
     color: #593b0d;
-    font-size: 30px;
+    font-size: 35px;
 }
 .header-banner{
     display:flex;
@@ -314,4 +316,10 @@ table#ContentPlaceHolder_GridView1 {
 }
 .h2-center{
     text-align:center;
+}
+
+h1, h2 {
+    font-family: 'Open Sans Condensed', sans-serif;
+    color: #593b0d;
+    font-size: 35px;
 }
